add edit and delete

--- a/errorHandlerApp/app/assets/stylesheets/style.css
+++ b/errorHandlerApp/app/assets/stylesheets/style.css
@@ -99,3 +99,16 @@ input[type=submit],.button-span {
     margin: auto;
     box-shadow: 0 0 10px #040000;
 }
+
+.big-container {
+    width: 100%;
+    position: relative;
+    padding: 10px;
+    margin: auto;
+    box-shadow: 0 0 10px #040000;
+}
+
+h1{
+  color:#FF404E;
+  font-size: 24px;
+}
