--- a/errorHandlerApp/app/views/prog_languages/new.html.erb
+++ b/errorHandlerApp/app/views/prog_languages/new.html.erb
@@ -5,7 +5,7 @@
 
 	<%= form_for @proglanguage do |create_f| %>
 	  <label>Name</label>
-	  <%= create_f.text_field :name %>
+	  <%= create_f.text_field :name ,class: 'Version' %>
 	  <br>
 	  <label>Description</label>
 	  <%= create_f.text_area :description  %>
