--- a/errorHandlerApp/app/views/prog_languages/index.html.erb
+++ b/errorHandlerApp/app/views/prog_languages/index.html.erb
@@ -1,8 +1,10 @@
-<h1 class="page-title second-bg"></h1>
-<div class="info-list">
-  <% @progLanguages.each do |proLanguage| %>
-    <div class="proLanguage-info info">
-      <h2 class="card-title"><%=  proLanguage.name %></h2>
+<div class="big-container">
+	<h1>List of programming Languages</h1>
+  	<% @progLanguages.each do |proLanguage| %>
+    <div>
+      	<h2 ><%=  proLanguage.name %></h2>
+    	<a href="/prog_languages/<%= proLanguage.id %>" >See error msgs list</a>
+
     </div>
-  <% end %>
+  	<% end %>
 </div>
